@@ -8,7 +8,7 @@
 #
 # Date: $Date$
 #
-# Copyright (c) 2002, Hewlett-Packard Company and Massachusetts
+# Copyright (c) 2002-2008, Hewlett-Packard Company and Massachusetts
 # Institute of Technology.  All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -43,56 +43,13 @@
 ###########################################################################
 
 # Shell script for updating a handle prefix (e.g. when moving from development
-# to production). Must be run as the dspace database user or equivalent.
+# to production).
 #
 # NOTE: Currently only compatible with installs running a PostgreSQL database
 #
 
-# validation and tool checking
-if [ ! "$1" -o ! "$2" ]
-then
-	echo
-	echo "Usage: update_handle_prefix <old handle> <new handle>"
-	echo
-	exit 1
-fi
+# Get the DSPACE/bin directory
+BINDIR=`dirname $0`
 
-which awk > /dev/null
-if [ $? -ne 0 ]
-then
-	echo
-	echo "awk not found in your path, please add to your path before running this script"
-	echo
-	exit 1
-fi
-
-which psql > /dev/null
-if [ $? -ne 0 ]
-then
-	echo
-	echo "psql not found in your PATH, please add to your PATH and re-run script"
-	echo
-	exit 1
-fi
-
-# start the update
-echo "If you continue, all handles in your repository with prefix $1 will be updated to have handle prefix $2"
-echo -n "Continue? [y/n]: "
-read choice
-if [ "$choice" = y -o "$choice" = Y ]
-then
-	# get the length of the old prefix for use in the overlay function
-	oldPrefixLen=`echo $1 | awk '{print length($1)}'`
-	echo "update handle set handle=overlay(handle placing '$2' from 1 for $oldPrefixLen) where handle like '$1%';" | psql
-	# update the metadatavalue table entries
-    echo "update metadatavalue set text_value=overlay(text_value placing '$2' from 23 for $oldPrefixLen) where text_value like 'http://hdl.handle.net/$1%';" | psql
-    # Reindex the site so the indexes contain the new handles
-    BINDIR=`dirname $0`
-    $BINDIR/index-all
-	break
-else
-	echo
-	echo "Update cancelled"	
-	echo
-	break
-fi
+$BINDIR/dsrun org.dspace.handle.UpdateHandlePrefix $@
+$BINDIR/index-all
