@@ -71,6 +71,7 @@ SF Patch 1794700  Bug fix for stat-monthly and stat-report-monthly
 - Removal of message for Netscape users in choose-file.jsp + removal of supporting text and images in the help file
 - SF Patch #1591871 Docs for google and html sitemaps
 - SF Patch #1799575 New EPersonConsumer event consumer
+- SF Patch #1642563 bin/update-handle-prefix rewritten in Java
 
 (Chris yates)
 - SF Patch #1724330 Removes "null" being displayed in community-home.jsp
